add Bem and sass in intro and hapiness sections

--- a/index.html
+++ b/index.html
@@ -83,62 +83,63 @@
 
         <!-- Intro section -->
 
-        <!-- <section class="container">
+        <section class="container">
             <h2 class="visually-hidden">Intro</h2>
             <div class="intro-section">
-                <p class="intro-number">#01</p>
-                <div class="intro-img">
-                    <div class="intro-img-bcg"></div>
-                    <img class="intro-trainer-img" src="./images/intro-trainer.svg" alt="" />
+                <p class="intro-section__number">#01</p>
+                <div class="img-block">
+                    <div class="img-block--bcg"></div>
+                    <img class="img-block__img" src="./images/intro-trainer.svg" alt="" />
                 </div>
-                <div class="intro-text-block">
-                    <img src="./images/stars.svg" alt="" class="stars" />
-                    <p class="intro-text">
+                <div class="intro-section__text-block">
+                    <img src="./images/stars.svg" alt="decor" class="stars" />
+                    <p class="intro-section__text">
                         Get targeted influencers list in your niche at your fingertips so
                         you can focus on running your.
                     </p>
                 </div>
-                <button class="intro-btn">
+                <button class="intro-section__btn">
                     Next
-                    <img class="rainbow-arrow" src="./images/rainbow-arrow.svg" alt="" />
-                    <img class="ellipse-img" src="./images/ellipse.svg" alt="" />
+                    <img class="rainbow-arrow" src="./images/rainbow-arrow.svg" alt="decor" />
+                    <img class="ellipse-img" src="./images/ellipse.svg" alt="decor" />
                 </button>
             </div>
-        </section> -->
+        </section>
 
         <!-- Happiness section -->
-        <!-- <section class="container happiness-section">
-            <div class="happiness-img-block">
-                <img class="happiness-trainer-img" src="./images/jumping-trainer.svg" alt="man doing yoga" />
-                <img class="happiness-lotus-img" src="./images/underlayer.svg" alt="logo" />
+
+        <section class="container hap-section">
+            <div class="hap-section__img-block">
+                <img class="hap-section__img-trainer" src="./images/jumping-trainer.svg" alt="man doing yoga" />
+                <img class="hap-section__img-lotus" src="./images/underlayer.svg" alt="decor" />
                 <div class="heart-block">
-                    <svg class="heart" width="60" height="60">
+                    <svg class="heart-block__icon" width="60" height="60">
                         <use href="./images/sprite.svg#icon-heart" width="29" height="26"></use>
                     </svg>
                     <div>
-                        <p class="heart-block-header">Heart Rate</p>
-                        <p><span class="heart-block-number">168</span> bpm</p>
+                        <p class="heart-block__header">Heart Rate</p>
+                        <p><span class="heart-block__number">168</span> bpm</p>
                     </div>
                 </div>
-                <div class="courses-stats-block">
-                    <p class="courses-number">500+</p>
-                    <p class="courses-text">Free Courses</p>
+                <div class="courses__block">
+                    <p class="courses__number">500+</p>
+                    <p class="courses__text">Free Courses</p>
                 </div>
             </div>
-            <div class="happiness-block">
-                <h2 class="block-title happiness-block-title">
+            <div class="hap-section__text-block">
+                <h2 class="block-title hap-section__title">
                     Get Happiness to Good healthy!
                 </h2>
                 <p class="block-text">
                     There are many variations of passages of Lorem Ipsum available, but
                     the majority have
                 </p>
-                <a class="hero-btn btn" href="./">Let’s Start
-                    <svg class="hero-btn-arrow" width="30" height="22">
+                <a class="hero__btn btn" href="./">Let’s Start
+                    <svg class="hero__btn--arrow" width="30" height="22">
                         <use href="./images/sprite.svg#icon-short-arrow"></use>
                     </svg></a>
             </div>
-        </section> -->
+        </section>
 
         <!-- Workout section -->
 
